@@ -921,14 +921,24 @@ exotic stuff will likely cause problems.
 In the future, the guts of this method might be replaced with a call
 out to C<version.pm>.
 
-=item config()
+=item config($key)
+
+=item config($key, $value)
+
+=item config() [deprecated]
 
 [version 0.22]
 
-Returns a hash reference containing the C<Config.pm> hash, including
-any changes the author or user has specified.  This is a reference to
-the actual internal hash we use, so you probably shouldn't modify
-stuff there.
+With a single argument C<$key>, returns the value associated with that
+key in the C<Config.pm> hash, including any changes the author or user
+has specified.  
+
+With C<$key> and C<$value> arguments, sets the value for future
+callers of C<config($key)>.
+
+With no arguments, returns a hash reference containing all such
+key-value pairs.  This usage is deprecated, though, because it's a
+resource hog and violates encapsulation.
 
 =item config_data($name)
 
