@@ -2,7 +2,7 @@
 
 use strict;
 use lib $ENV{PERL_CORE} ? '../lib/Module/Build/t/lib' : 't/lib';
-use MBTest tests => 55;
+use MBTest tests => 49;
 
 use Cwd ();
 my $cwd = Cwd::cwd;
@@ -145,6 +145,8 @@ my \$build = Module::Build->new(
   is $@, '';
 
   my $mb = Module::Build->resume;
+  ok $mb->valid_property('config');
+
   is $mb->config('cc'), $Config{cc};
   is $mb->config('foocakes'), 'barcakes';
 
@@ -156,14 +158,14 @@ my \$build = Module::Build->new(
   is $mb->args('any'), 'hey';
   is $mb->args('dee'), 'goo';
   is $mb->destdir, 'yo';
-  is $mb->runtime_params('destdir'), 'yo';
-  is $mb->runtime_params('verbose'), '1';
-  ok ! $mb->runtime_params('license');
-  ok my %runtime = $mb->runtime_params;
-  is scalar keys %runtime, 4;
-  is $runtime{destdir}, 'yo';
-  is $runtime{verbose}, '1';
-  ok $runtime{config};
+  my %runtime = $mb->runtime_params;
+  is_deeply \%runtime, 
+    {
+     verbose => 1,
+     destdir => 'yo',
+     use_rcfile => 0,
+     config => { foocakes => 'barcakes' },
+    };
 
   ok my $argsref = $mb->args;
   is $argsref->{foo}, 1;
